package NYT.NFileServer.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqGetFileChunk
{ }

message TRspGetFileChunk
{
    required bytes ChunkId = 1;
    repeated bytes HolderAddresses = 2;
    required int32 BlockCount = 3;
    required int64 Size = 4;
}

////////////////////////////////////////////////////////////////////////////////

message TReqSetFileChunk
{
    required bytes ChunkId = 3;
}

message TRspSetFileChunk
{ }

////////////////////////////////////////////////////////////////////////////////
